--- a/src/JsonApi-Relationships.html
+++ b/src/JsonApi-Relationships.html
@@ -98,42 +98,43 @@
 <a name="line-89"></a><span class='hs-comment'>--</span>
 <a name="line-90"></a><span class='hs-comment'>-- == Using it</span>
 <a name="line-91"></a><span class='hs-comment'>--</span>
-<a name="line-92"></a><span class='hs-comment'>-- getBookResource :: BookId -&gt; 'Include' -&gt; 'FieldsFilter' -&gt; DatabaseM Document</span>
-<a name="line-93"></a><span class='hs-comment'>-- getBookResource bookId whatToInclude fieldSet = do</span>
-<a name="line-94"></a><span class='hs-comment'>--   book &lt;- getBook bookId</span>
-<a name="line-95"></a><span class='hs-comment'>--   'serialiseDocument' (Proxy :: Proxy BookResource) book whatToInclude fieldSet</span>
-<a name="line-96"></a><span class='hs-comment'>--</span>
-<a name="line-97"></a><span class='hs-comment'>--</span>
-<a name="line-98"></a><span class='hs-keyword'>module</span> <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Relationships</span>
-<a name="line-99"></a>    <span class='hs-layout'>(</span> <span class='hs-comment'>-- * Defining resources</span>
-<a name="line-100"></a>      <span class='hs-conid'>ResourceId</span>
-<a name="line-101"></a>    <span class='hs-layout'>,</span> <span class='hs-varid'>mkResourceId</span>
-<a name="line-102"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>HasResourceId</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-103"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>IsResource</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-104"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- ** Helper functions for defining 'IsResource' instances</span>
-<a name="line-105"></a>      <span class='hs-varid'>links</span>
-<a name="line-106"></a>    <span class='hs-layout'>,</span> <span class='hs-varid'>meta</span>
-<a name="line-107"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Describing relationships</span>
-<a name="line-108"></a>      <span class='hs-conid'>Resource</span>
-<a name="line-109"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>Rel</span>
-<a name="line-110"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>RelInclude</span>
-<a name="line-111"></a>
-<a name="line-112"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Fetching related resources</span>
-<a name="line-113"></a>      <span class='hs-conid'>FetchMode</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-114"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>FetchRelated</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-115"></a>
-<a name="line-116"></a>    <span class='hs-layout'>,</span>  <span class='hs-comment'>-- * Fetching related resource from description</span>
-<a name="line-117"></a>      <span class='hs-conid'>SerialiseResource</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-118"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>Include</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-119"></a>
-<a name="line-120"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Serialising documents</span>
-<a name="line-121"></a>      <span class='hs-varid'>serialiseDocument</span>
-<a name="line-122"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>FieldsFilter</span>
-<a name="line-123"></a>    <span class='hs-layout'>)</span> <span class='hs-keyword'>where</span>
-<a name="line-124"></a>
-<a name="line-125"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Api</span>
-<a name="line-126"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Document</span>
-<a name="line-127"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Relationships</span>
-<a name="line-128"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Resource</span>
+<a name="line-92"></a><span class='hs-comment'>-- @</span>
+<a name="line-93"></a><span class='hs-comment'>-- getBookResource :: BookId -&gt; 'Include' -&gt; 'FieldsFilter' -&gt; DatabaseM Document</span>
+<a name="line-94"></a><span class='hs-comment'>-- getBookResource bookId whatToInclude fieldSet = do</span>
+<a name="line-95"></a><span class='hs-comment'>--   book &lt;- getBook bookId</span>
+<a name="line-96"></a><span class='hs-comment'>--   'serialiseDocument' (Proxy :: Proxy BookResource) book whatToInclude fieldSet</span>
+<a name="line-97"></a><span class='hs-comment'>-- @</span>
+<a name="line-98"></a><span class='hs-comment'>--</span>
+<a name="line-99"></a><span class='hs-keyword'>module</span> <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Relationships</span>
+<a name="line-100"></a>    <span class='hs-layout'>(</span> <span class='hs-comment'>-- * Defining resources</span>
+<a name="line-101"></a>      <span class='hs-conid'>ResourceId</span>
+<a name="line-102"></a>    <span class='hs-layout'>,</span> <span class='hs-varid'>mkResourceId</span>
+<a name="line-103"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>HasResourceId</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
+<a name="line-104"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>IsResource</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
+<a name="line-105"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- ** Helper functions for defining 'IsResource' instances</span>
+<a name="line-106"></a>      <span class='hs-varid'>links</span>
+<a name="line-107"></a>    <span class='hs-layout'>,</span> <span class='hs-varid'>meta</span>
+<a name="line-108"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Describing relationships</span>
+<a name="line-109"></a>      <span class='hs-conid'>Resource</span>
+<a name="line-110"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>Rel</span>
+<a name="line-111"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>RelInclude</span>
+<a name="line-112"></a>
+<a name="line-113"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Fetching related resources</span>
+<a name="line-114"></a>      <span class='hs-conid'>FetchMode</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
+<a name="line-115"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>FetchRelated</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
+<a name="line-116"></a>
+<a name="line-117"></a>    <span class='hs-layout'>,</span>  <span class='hs-comment'>-- * Fetching related resource from description</span>
+<a name="line-118"></a>      <span class='hs-conid'>SerialiseResource</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
+<a name="line-119"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>Include</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
+<a name="line-120"></a>
+<a name="line-121"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Serialising documents</span>
+<a name="line-122"></a>      <span class='hs-varid'>serialiseDocument</span>
+<a name="line-123"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>FieldsFilter</span>
+<a name="line-124"></a>    <span class='hs-layout'>)</span> <span class='hs-keyword'>where</span>
+<a name="line-125"></a>
+<a name="line-126"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Api</span>
+<a name="line-127"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Document</span>
+<a name="line-128"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Relationships</span>
+<a name="line-129"></a><span class='hs-keyword'>import</span>           <span class='hs-conid'>JsonApi</span><span class='hs-varop'>.</span><span class='hs-conid'>Internal</span><span class='hs-varop'>.</span><span class='hs-conid'>Resource</span>
 </pre></body>
 </html>
