--- a/src/JsonApi-Document.html
+++ b/src/JsonApi-Document.html
@@ -27,7 +27,7 @@
 <a name="line-18"></a>    <span class='hs-comment'>-- * Resource object</span>
 <a name="line-19"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>ResourceData</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
 <a name="line-20"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>ResourceObject</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
-<a name="line-21"></a>    <span class='hs-comment'>-- * Relatiomships</span>
+<a name="line-21"></a>    <span class='hs-comment'>-- * Relationships</span>
 <a name="line-22"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>Relationship</span> <span class='hs-layout'>(</span><span class='hs-keyglyph'>..</span><span class='hs-layout'>)</span>
 <a name="line-23"></a>    <span class='hs-layout'>,</span> <span class='hs-conid'>ResourceLinkage</span>
 <a name="line-24"></a>    <span class='hs-layout'>,</span> <span class='hs-comment'>-- * Meta data</span>
